implements all methods of the CurveService